argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.home`)
      services:
        - name: argocd-server
          port: 443
          serversTransport: argocd-transport
  tls:
    secretName: argocd-tls
